--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
 
-
+        <dependency>
+            <groupId>de.flapdoodle.embed</groupId>
+            <artifactId>de.flapdoodle.embed.mongo</artifactId>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
